--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,36 +1,18 @@
 <link rel="stylesheet" href="/css/home.css">
+<link rel="stylesheet" href="/css/sign_up.css">
 
-<div id="home-container">
-    <section id="feed-posts">
-            <h4>Posts</h4>
-            <% if(locals.user){ %>
-            <form action="/posts/create" id="new-post-form" method="POST">
-                <textarea name="content" cols="30" rows="3" placeholder="Type Here..." required></textarea>
-                <input type="submit" value="Post">
-            </form>
-            <% } %>
-        
-            <div id="posts-list-container">
-                <ul>
-                    <% for(post of posts){ %>
-                        
-                    <%- include('_post') -%>
-                        
-                    <%} %>
-                </ul>
-            </div>
-        </section>
-        
-        
-        <section id="user-friends">
-            <h4>Friends</h4>
-            <% for(u of all_users){%>
-                <p>
-                    <a href="/users/profile/<%= u.id %>"><%= u.name %></a>
-                </p>
-            <% } %>
-        </section>
-</div>
-<script src="/js/home_post_comments.js" ></script>
-<script src="/js/home_posts.js"></script>
-
+<section class="container forms">
+    <div class="form signup">
+        <div class="form-content">
+            <header id="form_header">Users List🧾</header>
+            <div class="linesimple"></div>
+            
+            <ul style="list-style: none; text-align: left;">
+                <% for(user of all_users){ %>
+            
+                    <li> <a href="/users/profile/<%= user._id%>">☺ <%= user.name %></a> </li>
+            
+                <% } %>
+            </ul>
+    </div>
+</section>
