--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,6 +4,7 @@
             <%= title  %>
         </title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css">
+        <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
@@ -11,8 +12,7 @@
         <link rel="stylesheet" href="/css/layout.css">
         <link rel="stylesheet" href="/css/header.css">
         <link rel="stylesheet" href="/css/footer.css">
-
-        <%- style %>
+        <link rel="stylesheet" href="/css/sign_up.css">
         
     </head>
 
@@ -52,6 +52,6 @@
                 }).show();    
             <%} %>
         </script>
-        
+        <script src="/js/sign_In_Up.js"></script>
     </body>
 </html>
