--- a/views/users_profile.ejs
+++ b/views/users_profile.ejs
@@ -1,20 +1,78 @@
 <link rel="stylesheet" href="/css/user_profile.css">
-<img src="<%= user.avatar %>" alt="<%= user.name %>" width="100px">
-
-
-
+<link rel="stylesheet" href="/css/sign_up.css">
 
 <% if(user.id == profile_user.id){ %>
+
+    <!-- <p><%= profile_user.name %></p>
+    <p><%= profile_user.email %></p> -->
+
     <!-- if user matches then show the update form -->
-    <form action="/users/update/<%= profile_user.id %>" method="POST" enctype="multipart/form-data">
+    <!-- <form action="/users/update/<%= profile_user.id %>" method="POST">
         <input type="text" name="name" placeholder="Your Name" value="<%= profile_user.name %>" required>
         <input type="email" name="email" placeholder="Your Email" value="<%= profile_user.email %>" required>
-        <input type="file" name="avatar" placeholder="Profile Picture">
-        <input type="submit"  value="Update">
-    </form>
+
+        <input type="password" name ="old_password" placeholder="Old Password"  required>
+        <input type="password" name ="new_password" placeholder="New Password" required>
+
+        <input type="submit"  value="update">
+    </form> -->
+
+    <section class="container forms">
+        <div class="form signup">
+            <div class="form-content">
+                <p>user_name:  <%= profile_user.name %></p>
+                <p>user_email : <%= profile_user.email %></p>
+    
+                <div class="lineAnd"></div>
+    
+                <header id="form_header">Update Details</header>
+                <form action="/users/update/<%= profile_user.id %>" method="POST">
+                    <div class="field input-field">
+                        <input type="text" name="name" placeholder="Your Name" value="<%= profile_user.name %>" class="input" required>
+                    </div>
+                    
+                    <div class="field input-field">
+                        <input type="email" name="email" placeholder="Email" value="<%= profile_user.email %>" class="input" required>
+                    </div>
+    
+                    <div class="field input-field">
+                        <input type="password" name="old_password" placeholder="Create password" class="password" required>
+                    </div>
+    
+                    <div class="field input-field">
+                        <input type="password" name="new_password" placeholder="New password" class="password" required>
+                        <i class='bx bx-hide eye-icon'></i>
+                    </div>
+    
+                    <div class="field button-field">
+                        <button type="submit" value="update">Update</button>
+                    </div>
+                </form>
+        </div>
+    </section>
     
 <%}else{%>    
     <!-- else show only the profile info -->
-    <p><%= profile_user.name %></p>
-    <p><%= profile_user.email %></p>
+    <!-- <p><%= profile_user.name %></p>
+    <p><%= profile_user.email %></p> -->
+
+    <section class="container forms">
+        <div class="form signup">
+            <div class="form-content">
+                <div class="form-link">
+                    <span>Not Your Profile! 🎫</span>
+                </div>
+                                
+                <div class="lineAnd"></div>
+
+                <header id="form_header">User Details</header>
+
+                <p>user_name:  <%= profile_user.name %></p>
+                <p>user_email : <%= profile_user.email %></p>
+    </section>
 <%} %>
+
+
+
+
+<script src="/js/sign_In_Up.js"></script>
